Moving all properties to application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.profiles.active=ES
+
+guru.jms.username=JMS Username
+guru.jms.password=somepass
+guru.jms.url=SomeURL
+
+guru.username=Khrystyna
+guru.password=somepass
+guru.url=someurl.com
