--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,3 +1,3 @@
-guru.username=Khrystyna
-guru.password=somepass
-guru.url=someurl.com
+#guru.username=Khrystyna
+#guru.password=somepass
+#guru.url=someurl.com
