Using application.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.profiles.active=ES
 
-guru.jms.username=JMS Username
-guru.jms.password=somepass
-guru.jms.url=SomeURL
+#guru.jms.username=JMS Username
+#guru.jms.password=somepass
+#guru.jms.url=SomeURL
 
 guru.username=Khrystyna
 guru.password=somepass
