Using properties for profiles

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,10 @@ guru:
     username: JMS Username
     password: somepass
     url: SomeUrl
+
+---
+spring:
+  profiles: es
+guru:
+  jms:
+    username: JMS Username $$$$ In SPANISH from jaml config
